--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
 	"require": {
-		"symfony/http-foundation": "~2.4",
-		"mandrill/mandrill": "@stable",
+		"silex/silex": "~1.2",
 		"twig/twig": "@stable",
 		"stripe/stripe-php": "~1.17"
 	}
